--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "jest",
     "typecheck": "tsc --skipLibCheck --noEmit",
+    "prepack": "bob build",
     "build": "bob build"
   },
   "husky": {
@@ -50,7 +51,8 @@
   "peerDependencies": {
     "react-native": ">=0.64.0",
     "react-native-gesture-handler": ">=2.0.0",
-    "react-native-reanimated": ">=2.8.0"
+    "react-native-reanimated": ">=2.8.0",
+    "@shopify/flash-list": "1.4.1"
   },
   "devDependencies": {
     "@testing-library/react-native": "^7.2.0",
@@ -68,6 +70,7 @@
     "react-native-gesture-handler": "^2.1.0",
     "react-native-reanimated": "^2.8.0",
     "react-test-renderer": "^17.0.2",
+    "@shopify/flash-list": "1.4.1",
     "typescript": "^4.2.4"
   },
   "react-native-builder-bob": {
